--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li class="text-gray-700 font-bold">
                         <a href="#">
-                            <span>Home</span>
+                            <span>Home page</span>
                         </a>
                     </li>
                     <li>
